--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,9 @@
             <version>21-ea+17</version>
         </dependency>
         <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-web</artifactId>
-            <version>17.0.7</version>
+            <groupId>org.fxmisc.richtext</groupId>
+            <artifactId>richtextfx</artifactId>
+            <version>0.11.0</version>
         </dependency>
     </dependencies>
     <build>
